# g2log

./: CMakeLists.txt
src/: crashhandler_unix.cpp  g2future.h  g2log.cpp  g2log.h  g2logworker.cpp  g2moveoncopy.hpp
test_example/: main.cpp
test_performance/: main_threaded_mean.cpp  main_threaded_worst.cpp  performance.h
test_unit/: test_exploratory.cpp  test_filechange.cpp  test_io.cpp
